k8s/front-end.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end-service
  template:
    metadata:
      labels:
        app: front-end-service
    spec:
      containers:
      - name: front-end-service
        image: "dmbondarenko/udemy-front-microservice"
        ports:
        - containerPort: 8081

---

apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    app: front-end-service
  ports:
  - protocol: TCP
    name: main-port
    port: 8081
    targetPort: 8080
