k8s/logger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-service
  template:
    metadata:
      labels:
        app: log-service
    spec:
      containers:
      - name: log-service
        image: "dmbondarenko/udemy-logs-microservice"
        ports:
        - containerPort: 8080
        - containerPort: 5001
        - containerPort: 50001

---

apiVersion: v1
kind: Service
metadata:
  name: log-service
spec:
  selector:
    app: log-service
  ports:
  - protocol: TCP
    name: web-port
    port: 8080
    targetPort: 8080
  - protocol: TCP
    name: rpc-port
    port: 5001
    targetPort: 5001
  - protocol: TCP
    name: grpc-port
    port: 50001
    targetPort: 50001
