k8s/rabbitmq.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: rabbitmq

spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: mongo
        image: "rabbitmq:3.9-alpine"
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
          - containerPort: 5672

---

apiVersion: v1

kind: Service

metadata:
  name: rabbitmq

spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      name: main-port
      port: 5672
      targetPort: 5672
