k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: front-end.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-service
            port:
              number: 8080
  - host: broker-service.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: broker-service
            port:
              number: 8080
